# png-reader

./: .clang-format  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md
include/: CRC.h  CRC.hpp  Chunk.hpp  Common.h  Common.hpp  Filter.h  Filter.hpp  Image.h  Image.hpp  WorkerPool.hpp  Zlib.h  Zlib.hpp
include/utility/: export.hpp
src/: CMakeLists.txt  Chunk.cpp  CmakeLists.txt  Filter.cpp  Zlib.cpp
test/: CMakeLists.txt  TestFilter.cpp  TestImage.cpp  TestZlib.cpp
